--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+#
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/m4_b1_th
+#spring.datasource.url=mysql://localhost:3306/m4_b1_th
 #spring.datasource.username=root
 #spring.datasource.password=quangha97
 #spring.jpa.show-sql=true
@@ -20,3 +21,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.hb2dll.auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.security.user.name=ha
+spring.security.user.password=123456
